changes from reveiw